kpsignal2: do not make the signal pending twice when tracing the process, also update a comment and add an assert.  Fixes PR/42309 by Nicolas Joly.